--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EventConnect"
         tools:targetApi="31">
+        <activity
+            android:name=".EventActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.gms.auth.api.credentials.google_sign_in_api_key"
             android:value="AIzaSyBBA-HlXi2wa70kGFhl12Vgwnj75bB6bBw" />
